
Release history for Importer-Zim-Unit

{{$NEXT}}

v0.4     2017-11-08 16:33:19-08:00 America/Los_Angeles

    - Separate export_to()

v0.3     2017-09-29 11:35:21-07:00 America/Los_Angeles

    - Produce DEBUG message with carp()
    - Apply indentation to DEBUG messages
    - Depend on Importer::Zim::Utils 0.8.0+
    - Depend on Importer::Zim::Base 0.8.0+

v0.2     2017-09-25 12:13:02-07:00 America/Los_Angeles

    - Depend on Importer::Zim::Base 0.6.0

v0.1     2017-09-25 11:52:34-07:00 America/Los_Angeles

    - Initial version

v0.0     2017-09-22

    - Initial commit