@@ -3,6 +3,9 @@ Release history for Importer-Zim-Unit
 
 {{$NEXT}}
 
+    - Lift dependency on Importer::Zim::Base to runtime
+    - Depend on Importer::Zim::Base 0.12.0+
+
 v0.4     2017-11-08 16:33:19-08:00 America/Los_Angeles
 
     - Separate export_to()
